--- a/ionic/elektron/www/templates/tab-signup.html
+++ b/ionic/elektron/www/templates/tab-signup.html
@@ -15,8 +15,9 @@
 			<div class="list list-inset removePM">
 			  <label class="item item-input"><input type="text" placeholder="Nombre completo"> </label>
 			  <label class="item item-input"><input type="text" placeholder="Dirección de mail"> </label>
-			  <label class="item item-input"><input type="text" placeholder="Teléfono"> </label>
+			  <label class="item item-input"><input type="text" placeholder="ID de aplicación"> </label>
 			  <label class="item item-input"><input type="password" placeholder="Contraseña"> </label>
+        <label class="item item-input"><input type="password" placeholder="Confirmar contraseña"> </label>
 			</div>
 
 			<div class="loginButton"><button class="button ion-person button-block button-balanced"> Registrarse </button>  </div>
