--- a/ionic/elektron/www/templates/tareas.html
+++ b/ionic/elektron/www/templates/tareas.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Componentes">
+<ion-view view-title="Tareas">
   <ion-content>
     <!--
     <ion-list>
@@ -11,7 +11,7 @@
 
     <div class="card">
       <div class="item item-divider">
-          Componentes
+          Tareas
       </div>
         <div class="list">
             <div class="item item-button-right">
