--- a/ionic/elektron/www/templates/menu.html
+++ b/ionic/elektron/www/templates/menu.html
@@ -22,7 +22,7 @@
         <ion-item menu-close href="#/app/dashboard"><i class="icon ion-home"></i> Inicio</ion-item>
         <ion-item menu-close href="#/app/components"><i class="icon ion-cube"></i> Componentes </ion-item>
         <ion-item menu-close href="#/app/tasks"><i class="icon ion-clipboard"></i> Tareas </ion-item>
-        <ion-item menu-close href="#/app/profiles"><i class="icon ion-arrow-graph-up-right"></i> Estadísticas </ion-item>
+        <ion-item menu-close href="#/app/statics"><i class="icon ion-arrow-graph-up-right"></i> Estadísticas </ion-item>
         <ion-item menu-close href="#/app/profiles"><i class="icon ion-gear-a"></i> Configuración </ion-item>
         <ion-item menu-close href="#" ng-click="logout()"><i class="icon ion-log-out"></i> Cerrar sesion </ion-item>
       </ion-list>
