--- a/ionic/elektron/www/templates/tab-signin.html
+++ b/ionic/elektron/www/templates/tab-signin.html
@@ -6,7 +6,7 @@
     </div>
  </div>
 
-<ion-view view-title="Sign In" class="loginBg" hide-nav-bar="true" >
+<ion-view view-title="Iniciar sesion" class="loginBg" hide-nav-bar="true" >
 <!-- <ion-nav-title><img src="img/logo.png" width="40"></ion-nav-title> -->
 
   <ion-content class="padding">
