--- a/ionic/elektron/www/templates/dashboard.html
+++ b/ionic/elektron/www/templates/dashboard.html
@@ -41,7 +41,7 @@
         <div class="row item item-divider">
           <div class="col col-50 title-components"><b>Estadisticas</b></div>
           <div class="col"></div>
-          <div class="col"><a ui-sref="app.statics" class="button button-small button-positive">Ver estadisticas</a>
+          <div class="col"><a ui-sref="app.statistics" class="button button-small button-positive">Ver estadisticas</a>
           </div>
         </div>
       </div>
