--- a/ionic/elektron/www/templates/statistics.html
+++ b/ionic/elektron/www/templates/statistics.html
@@ -6,25 +6,25 @@
               <span>Elegir consumo</span>
           </div>
           <div "">
-            <div class="item item-icon-left" ion-datetime-picker date ng-model="dateValue">
+            <div class="item item-icon-left" ion-datetime-picker date ng-model="dateFrom">
                 <i class="icon ion-ios-calendar positive"></i>
                 Desde
-                <strong>{{dateValue| date: "yyyy-MM-dd"}}</strong>
+                <strong>{{dateFrom| date: "yyyy-MM-dd"}}</strong>
             </div>
-            <div class="item item-icon-left" ion-datetime-picker time ng-model="timeValue">
+            <div class="item item-icon-left" ion-datetime-picker time ng-model="timeFrom">
                 <i class="icon ion-ios-clock positive"></i>
                 Hora
-                <strong>{{timeValue| date: "H:mm"}}</strong>
+                <strong>{{timeFrom| date: "H:mm"}}</strong>
             </div>
-            <div class="item item-icon-left" ion-datetime-picker date ng-model="dateValue">
+            <div class="item item-icon-left" ion-datetime-picker date ng-model="dateTo">
                 <i class="icon ion-ios-calendar-outline positive"></i>
                 Hasta
-                <strong>{{dateValue| date: "yyyy-MM-dd"}}</strong>
+                <strong>{{dateTo| date: "yyyy-MM-dd"}}</strong>
             </div>
-            <div class="item item-icon-left" ion-datetime-picker time ng-model="timeValue">
+            <div class="item item-icon-left" ion-datetime-picker time ng-model="timeTo">
                 <i class="icon ion-ios-clock positive"></i>
                 Hora
-                <strong>{{timeValue| date: "H:mm"}}</strong>
+                <strong>{{timeTo| date: "H:mm"}}</strong>
             </div>
           </div>
           <div class="item item-divider">
@@ -43,7 +43,7 @@
             </label>
             <div class="item">
               <div class="button-bar">
-                <a ui-sref="app.graphic-statistics({ componentId: 2, from:1, to:2 })" class="button button-positive icon ion-stats-bars">
+                <a ui-sref="app.graphic-statistics({ componentId: 2, dateFrom: dateFrom, timeFrom: timeFrom, dateTo:dateTo, timeTo:timeTo })" class="button button-positive icon ion-stats-bars">
                   Ver estadísticas
                 </a>
               </div>
