--- a/ionic/elektron/www/templates/graphic-statistics.html
+++ b/ionic/elektron/www/templates/graphic-statistics.html
@@ -11,7 +11,7 @@
         <span>Detalles:</span>
       </div>
       <div date class="item">
-        <span class=""><b>Desde</b>: {{dateFrom| date: shortDate}} - Hora: {{timeFrom| date: "shortTime"}}</span>
+        <span class=""><b>Desde</b>: {{dateFrom| date: "shortDate"}} - Hora: {{timeFrom| date: "shortTime"}}</span>
       </div>
       <div date class="item">
         <span class=""><b>Hasta</b>: {{dateTo| date: "shortDate"}} - Hora: {{timeTo| date: "shortTime"}}</span>
