agregue el listado de tasks

--- a/ionic/elektron/www/templates/components.html
+++ b/ionic/elektron/www/templates/components.html
@@ -15,7 +15,7 @@
       <div class="list">
           <div class="item item-button-right" ng-repeat="component in components">
             <span>{{component.label}}</span>
-            <span class="badge badge-calm">{{component.data}}</span>
+            <span class="badge badge-calm">{{data}}</span>
             <a ui-sref="app.component({ componentId: {{component.id}} })" class="button button-positive">
               <i class="icon ion-compose"></i>
             </a>
