--- a/ionic/elektron/www/templates/dashboard.html
+++ b/ionic/elektron/www/templates/dashboard.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Elektron" hide-back-button="true">
 
-    <ion-content ng-controller="ExampleController">
+    <ion-content>
       <div class="card">
           <div class="item item-toggle">
               <span>Consumo en tiempo real</span>
