--- a/ionic/elektron/www/templates/task.html
+++ b/ionic/elektron/www/templates/task.html
@@ -1,15 +1,15 @@
-<ion-view view-title="Tareas">
+<ion-view view-title="Nueva tarea">
   <ion-content >
     <div class="card">
         <div class="item item-divider">
-            <span>Programar tareas de componentes</span>
+            <span>Elegir componente</span>
         </div>
         <label class="item item-input item-select">
           <div class="input-label ">
             Componente
           </div>
           <select>
-            <option selected>Todos</option>
+            <option selected>Luces</option>
             <option>Aire acondicionado</option>
             <option>Lavarropas</option>
             <option>Heladera</option>
@@ -53,7 +53,7 @@
 
         <div class="item">
           <div class="button-bar">
-            <a ui-sref="" class="button button-positive icon ion-ios-bolt">
+            <a class="button button-positive icon ion-ios-bolt">
               Programar
             </a>
           </div>
