--- a/ionic/elektron/www/templates/tab-signin.html
+++ b/ionic/elektron/www/templates/tab-signin.html
@@ -20,7 +20,9 @@
 			  <label class="item item-input"><input type="password" ng-model="user.password" placeholder="Contraseña" > </label>
 			</div>
 
-			<div class="loginButton"><button class="button ion-unlocked button-block button-balanced" ng-click="login(user);" > Ingresar </button>  </div>
+			<div class="loginButton">
+        <button class="button ion-unlocked button-block button-balanced" ng-click="login(user);" > Ingresar </button>
+      </div>
 	  </div>
   </div>
   <!-- Social network login
