Web- login -register -logo nuevo - index

--- a/web/elektron/views/extras-signupform.html
+++ b/web/elektron/views/extras-signupform.html
@@ -1,14 +1,22 @@
 <div class="verticalcenter" ng-controller="SignupPageController">
-	<a href="#/"><img src="assets/img/logo-big-black.png" alt="Logo" class="brand" /></a>
+	<a href="#/"><img src="assets/img/iconoelektron.png" alt="Logo" class="brand" /></a>
 	<div class="panel panel-primary">
 		<div class="panel-body">
-			<h2 class="text-center" style="margin-bottom: 25px;">Sign Up</h2>
+			<h2 class="text-center" style="margin-bottom: 25px;">Elektron - registrarse</h2>
 			<form action="#" class="form-horizontal" style="margin-bottom: 0px !important;">
 				<div class="form-group">
 					<div class="col-sm-12">
 						<div class="input-group">
 							<span class="input-group-addon"><i class="fa fa-envelope-o"></i></span>
-							<input type="text" class="form-control" id="email" placeholder="Email">
+							<input type="text" class="form-control" id="email" placeholder="Nombre completo">
+						</div>
+					</div>
+				</div>
+        <div class="form-group">
+					<div class="col-sm-12">
+						<div class="input-group">
+							<span class="input-group-addon"><i class="fa fa-user"></i></span>
+							<input type="text" class="form-control" id="username" placeholder="Usuario o mail">
 						</div>
 					</div>
 				</div>
@@ -16,7 +24,7 @@
 					<div class="col-sm-12">
 						<div class="input-group">
 							<span class="input-group-addon"><i class="fa fa-user"></i></span>
-							<input type="text" class="form-control" id="username" placeholder="Username">
+							<input type="text" class="form-control" id="username" placeholder="ID de aplicacion">
 						</div>
 					</div>
 				</div>
@@ -24,7 +32,7 @@
 					<div class="col-sm-12">
 						<div class="input-group">
 							<span class="input-group-addon"><i class="fa fa-lock"></i></span>
-							<input type="password" class="form-control" id="password" placeholder="Password">
+							<input type="password" class="form-control" id="password" placeholder="Contraseña">
 						</div>
 					</div>
 				</div>
@@ -32,24 +40,18 @@
 					<div class="col-sm-12">
 						<div class="input-group">
 							<span class="input-group-addon"><i class="fa fa-lock"></i></span>
-							<input type="password" class="form-control" id="password" placeholder="Repeat password">
+							<input type="password" class="form-control" id="password" placeholder="Repetir contraseña">
 						</div>
 					</div>
 				</div>
-				<div class="checkbox block" style="text-align:center">
-					<input icheck type="checkbox">
-					<span>
-						I accept the <a href="#">User Agreement</a>
-					</span>
-				</div>
-			</form>	
+			</form>
 		</div>
 		<div class="panel-footer">
 			<div class="pull-left">
-				<a href="#/index" class="btn btn-default">Cancel</a>
+				<a href="#/index" class="btn btn-default">Cancelar</a>
 			</div>
 			<div class="pull-right">
-				<a href="#" class="btn btn-success">Sign up</a>
+				<a href="#" class="btn btn-success">Registrarse</a>
 			</div>
 		</div>
 	</div>
