--- a/web/elektron/views/index.html
+++ b/web/elektron/views/index.html
@@ -140,38 +140,26 @@
         <div class="col-md-4 animated-content">
             <div class="row">
                 <div class="col-xs-6">
-                    <tile-simple data="{ title: 'Componentes', href: '#/ui-tiles',text: '8', color: 'danger'}"></tile-simple>
+                    <tile-simple data="{ title: 'Componentes', href: '#/ui-tiles',text: '8', color: 'success'}"></tile-simple>
                 </div>
                 <div class="col-xs-6">
-                    <tile-simple data="{ title: 'Consumo total', href: '#/ui-tiles',text: '441', color: 'indigo'}"></tile-simple>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-6">
-                    <tile-simple data="{ title: 'Costo aproximado', href: '#/ui-tiles',text: '$1,138', color: 'success'}"></tile-simple>
-                </div>
-                <div class="col-xs-6">
-                    <tile-simple data="{ title: 'Members', href: '#/ui-tiles',text: '27', color: 'midnightblue'}"></tile-simple>
+                    <tile-simple data="{ title: 'Tareas programadas', href: '#/ui-tiles',text: '17', color: 'midnightblue'}"></tile-simple>
                 </div>
             </div>
             <div class="row">
                 <div class="col-xs-6">
-                    <a class="info-tiles tiles-facebook" href>
-                        <div class="tiles-heading"><span class="text-center">Facebook</span></div>
-                        <div class="tiles-body">
-                            <div class="pull-left"><i class="fa fa-thumbs-o-up"></i></div>
-                            <div class="pull-right">215</div>
-                        </div>
-                    </a>
+                    <tile-simple data="{ title: 'Consumo utilizado actualmente', href: '#/ui-tiles',text: '27%', color: 'orange'}"></tile-simple>
                 </div>
                 <div class="col-xs-6">
-                    <a  class="info-tiles tiles-twitter">
-                        <div class="tiles-heading"><span class="text-center">Twitter</span></div>
-                        <div class="tiles-body">
-                            <div class="pull-left"><i class="fa fa-twitter"></i></div>
-                            <div class="pull-right">964</div>
-                        </div>
-                    </a>
+                    <tile-simple data="{ title: 'Maximo consumo planificado', href: '#/ui-tiles',text: '733 Kw', color: 'danger'}"></tile-simple>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-6">
+                    <tile-simple data="{ title: 'Consumo actual', href: '#/ui-tiles',text: '161 kw', color: 'primary'}"></tile-simple>
+                </div>
+                <div class="col-xs-6">
+                    <tile-simple data="{ title: 'Costo aproximado', href: '#/ui-tiles',text: '$1.138', color: 'green'}"></tile-simple>
                 </div>
             </div>
             <div class="row">
