--- a/web/elektron/views/tasks.html
+++ b/web/elektron/views/tasks.html
@@ -1,10 +1,10 @@
 <div id="page-heading">
 	<ol class="breadcrumb">
 		<li><a href="#/">Dashboard</a></li>
-		<li class="active">Tasks</li>
+		<li class="active">Tareas</li>
 	</ol>
 
-	<h1>Tasks</h1>
+	<h1>Tareas de componentes</h1>
 </div>
 
 <div class="container-fluid" ng-controller="TasksController">
@@ -53,12 +53,12 @@
 	<div class="row">
 		<div class="col-xs-12">
 
-			<panel heading="Tasks" panel-class="panel-sky">
+			<panel heading="Tareas" panel-class="panel-sky">
 				<panel-controls>
 					<panel-control-collapse></panel-control-collapse>
                     <panel-control-title></panel-control-title>
                     <panel-control-colors></panel-control-colors>
-					<button class="btn btn-primary btn-sm mr10" ng-click="showForm=true;showTasksTab=true;showCompletedTab=false" style="margin-top: -5px;">Add Task</button>
+					<button class="btn btn-primary btn-sm mr10" ng-click="showForm=true;showTasksTab=true;showCompletedTab=false" style="margin-top: -5px;">Agregar tarea</button>
 				</panel-controls>
 
 				<div>
@@ -88,7 +88,7 @@
 								    <div class="input-group-btn">
 								    	<input
 		                  				class="btn btn-success btn-block"
-		                  				value="Add Task"
+		                  				value="Agregar tarea"
 		                  				type="submit"
 		                  				/>
 								    </div>
@@ -97,11 +97,11 @@
 
 
                   			<div class="col-xs-3 col-md-2">
-		                  			
+
 	                  		</div>
                   		</div>
-                  		
-                  	</form> 	
+
+                  	</form>
                   </div>
 
  					<div class="tasklist">
