--- a/web/elektron/assets/less/layout.less
+++ b/web/elektron/assets/less/layout.less
@@ -18,15 +18,15 @@ body {
 
 #wrapper 				{display:table;width: 100%; table-layout: fixed; overflow: auto; height: 100%; position: relative;}
 #layout-static 			{display: table-row; height: 100%;}
-.static-sidebar-wrapper {display: table-cell; overflow: hidden;} 
+.static-sidebar-wrapper {display: table-cell; overflow: hidden;}
 .static-sidebar-wrapper, .static-sidebar {width: 240px;}
-.static-content-wrapper {display: table-cell; position: relative; background: @body-bg}
+.static-content-wrapper {display: table-cell; position: relative; background: #5f9ea0}
 .static-sidebar-wrapper, .static-content-wrapper {vertical-align: top;}
 footer					{background: @body-bg;}
 
 
 /* Fix the Grid */
-#wrap > .container-fluid, 
+#wrap > .container-fluid,
 #wrap > .container {
 	padding: 20px;
 }
@@ -69,7 +69,7 @@ footer {
 	background: @body-bg;
 	color: @gray;
 
-	padding: 5px 20px; 
+	padding: 5px 20px;
 	position: absolute;
 	left: 0;
 	right: 0;
@@ -100,7 +100,7 @@ footer {
 /* Page heading */
 
 #page-heading {
-	background: @page-title-color; 
+	background: @page-title-color;
 	&:extend(.clearfix all);
 
 
@@ -154,7 +154,7 @@ footer {
 	.infobar, header {display: none;}
 
 	.panel {width: 400px;}
-	.brand {display: block; padding-bottom: 40px; margin: 0 auto; width: 224px;}
+	.brand {display: block; padding-bottom: 40px; margin: 0 auto; width: 134px;}
 
 	.verticalcenter {
 		width: 400px;
@@ -224,7 +224,7 @@ footer {
 				border-style: solid;
 				border-width: 0 9px 9px 9px;
 				border-color: transparent transparent @body-bg transparent;
-				
+
 				content: "";
 				position: absolute;
 				bottom: 0px; left: 50%; margin-left: -9px;
@@ -286,7 +286,7 @@ nav.navbar {
 			background: transparent;
 			border:none;
 		}
-	} 
+	}
 }
 
 @media (min-width: @screen-sm) {
@@ -388,7 +388,7 @@ nav.navbar {
 // 	opacity: 0;
 // }
 
-// .mainview-animation.ng-enter.ng-enter-active { 
+// .mainview-animation.ng-enter.ng-enter-active {
 // 	opacity: 1;
 // }
 
