--- a/web/elektron/views/extras-login2.html
+++ b/web/elektron/views/extras-login2.html
@@ -1,32 +1,32 @@
 <div class="verticalcenter" ng-controller="SignupPageController">
-	<a href="#/"><img src="assets/img/logo-big-black.png" alt="Logo" class="brand" /></a>
+	<a href="#/"><img src="assets/img/iconoelektron.png" alt="Logo" class="brand" /></a>
 	<div class="panel panel-primary">
 		<div class="panel-body">
-			<h4 class="text-center" style="margin-bottom: 25px;">Just click log in!</h4>
+			<h2 class="text-center" style="margin-bottom: 25px;">Ingresa al sistema</h2>
 			<form action="#" class="form-horizontal">
 				<div class="form-group">
-					<label for="email" class="control-label col-sm-4" style="text-align: left;">Email</label>
+					<label for="email" class="control-label col-sm-4" style="text-align: left;">Usuario</label>
 					<div class="col-sm-8">
-						<input type="text" class="form-control" id="email" placeholder="Email">
+						<input type="text" class="form-control" id="email" placeholder="Usuario o mail">
 					</div>
 				</div>
 				<div class="form-group">
-					<label for="password" class="control-label col-sm-4" style="text-align: left;">Password</label>
+					<label for="password" class="control-label col-sm-4" style="text-align: left;">Contraseña</label>
 					<div class="col-sm-8">
-						<input type="password" class="form-control" id="password" placeholder="Password">
+						<input type="password" class="form-control" id="password" placeholder="Contraseña">
 					</div>
 				</div>
 				<div class="clearfix">
-					<div class="pull-right"><label><input type="checkbox" checked> Remember Me</label></div>
+					<div class="pull-right"><label><input type="checkbox" checked> Recordarme</label></div>
 				</div>
-				<a href="#/" class="btn btn-primary btn-block" ng-click="logIn()" data-pulsate="{reach:10, pause: 2000}">Log In</a>
+				<a href="#/" class="btn btn-primary btn-block" ng-click="logIn()" data-pulsate="{reach:10, pause: 2000}">Ingresar</a>
 			</form>
 		</div>
 		<div class="panel-footer">
-			<a href="#/" class="pull-left btn btn-link" style="padding-left:0">Forgot password?</a>
-			
+			<a href="#/" class="pull-left btn btn-link" style="padding-left:0">¿Olvidaste la contraseña?</a>
+
 			<div class="pull-right">
-				<a href="#" class="btn btn-default">Reset</a>
+				<a href="#" class="btn btn-default">Recuperar</a>
 			</div>
 		</div>
 	</div>
