--- a/web/elektron/assets/less/layout.less
+++ b/web/elektron/assets/less/layout.less
@@ -20,7 +20,8 @@ body {
 #layout-static 			{display: table-row; height: 100%;}
 .static-sidebar-wrapper {display: table-cell; overflow: hidden;}
 .static-sidebar-wrapper, .static-sidebar {width: 240px;}
-.static-content-wrapper {display: table-cell; position: relative; background: #5f9ea0}
+.static-content-wrapper {display: table-cell; position: relative; background: @body-bg}
+.color-outside {background: #5f9ea0}
 .static-sidebar-wrapper, .static-content-wrapper {vertical-align: top;}
 footer					{background: @body-bg;}
 
