--- a/web/elektron/views/layout/header.html
+++ b/web/elektron/views/layout/header.html
@@ -104,7 +104,7 @@
 
 	<ul class="nav navbar-nav pull-right toolbar">
 	  <li class="dropdown" ng-show="!isLoggedIn">
-		<a href="#/extras-login2" style="font-size: 14px"><i class="fa fa-sign-in"></i> Log in</a>
+		<a href="#/login" style="font-size: 14px"><i class="fa fa-sign-in"></i> Log in</a>
 	  </li>
 	  <li class="dropdown" ng-show="isLoggedIn" dropdown>
 		<a href class="dropdown-toggle username" dropdown-toggle><img src="assets/demo/avatar/dangerfield.png" alt="Dangerfield" /></a>
