--- a/web/elektron/views/login.html
+++ b/web/elektron/views/login.html
@@ -3,23 +3,23 @@
 	<div class="panel panel-primary">
 		<div class="panel-body">
 			<h2 class="text-center" style="margin-bottom: 25px;">Ingresa al sistema <a href="#/extras-signupform">o registrarse!</a></h2>
-			<form action="#" class="form-horizontal">
+			<form class="form-horizontal">
 				<div class="form-group">
 					<label for="email" class="control-label col-sm-4" style="text-align: left;">Usuario</label>
 					<div class="col-sm-8">
-						<input type="text" class="form-control" id="email" placeholder="Usuario o mail">
+						<input type="text" class="form-control" ng-model="username" id="email" placeholder="Usuario o mail">
 					</div>
 				</div>
 				<div class="form-group">
 					<label for="password" class="control-label col-sm-4" style="text-align: left;">Contraseña</label>
 					<div class="col-sm-8">
-						<input type="password" class="form-control" id="password" placeholder="Contraseña">
+						<input type="password" class="form-control" ng-model="password" id="password" placeholder="Contraseña">
 					</div>
 				</div>
 				<div class="clearfix">
 					<div class="pull-right"><label><input type="checkbox" checked> Recordarme</label></div>
 				</div>
-				<a href="#/" class="btn btn-primary btn-block" ng-click="logIn()" data-pulsate="{reach:10, pause: 2000}">Ingresar</a>
+				<a href="/#/index" class="btn btn-primary btn-block" ng-click="login()" data-pulsate="{reach:10, pause: 2000}">Ingresar</button>
 			</form>
 		</div>
 		<div class="panel-footer">
