copia de elektron web pero oculta

--- a/web/elektron/views/login.html
+++ b/web/elektron/views/login.html
@@ -19,7 +19,7 @@
 				<div class="clearfix">
 					<div class="pull-right"><label><input type="checkbox" checked> Recordarme</label></div>
 				</div>
-				<a href="/#/index" class="btn btn-primary btn-block" ng-click="login()" data-pulsate="{reach:10, pause: 2000}">Ingresar</button>
+				<a href="/#/index" class="btn btn-primary btn-block" ng-click="login()" data-pulsate="{reach:10, pause: 2000}">Ingresar</a>
 			</form>
 		</div>
 		<div class="panel-footer">
