--- a/web/elektron/views/login.html
+++ b/web/elektron/views/login.html
@@ -2,7 +2,7 @@
 	<a href="#/"><img src="assets/img/iconoelektron.png" alt="Logo" class="brand" /></a>
 	<div class="panel panel-primary">
 		<div class="panel-body">
-			<h2 class="text-center" style="margin-bottom: 25px;">Ingresa al sistema <a href="#/extras-signupform">o registrarse!</a></h2>
+			<h2 class="text-center" style="margin-bottom: 25px;">Elektron - Iniciar sesión</h2>
 			<form class="form-horizontal">
 				<div class="form-group">
 					<label for="email" class="control-label col-sm-4" style="text-align: left;">Usuario</label>
@@ -25,7 +25,10 @@
 		<div class="panel-footer">
 			<a href="#/" class="pull-left btn btn-link" style="padding-left:0">¿Olvidaste la contraseña?</a>
 
-			<div class="pull-right">
+      <div class="pull-right" >
+				<a href="#/extras-signupform" class="btn btn-default">Crear cuenta</a>
+			</div>
+			<div class="pull-right" style="margin-right: 5px;">
 				<a href="#" class="btn btn-default">Recuperar</a>
 			</div>
 		</div>
