--- a/web/elektron/assets/less/styles.less
+++ b/web/elektron/assets/less/styles.less
@@ -30,8 +30,8 @@
 // Components: common
 @import "bootstrap/component-animations.less";
 @import "bootstrap/dropdowns.less";
-@import "bootstrap/list-group.less";
-@import "bootstrap/wells.less";
+//@import "bootstrap/list-group.less";
+//@import "bootstrap/wells.less";
 @import "bootstrap/close.less";
 
 // Components: Nav
@@ -39,22 +39,22 @@
 @import "bootstrap/button-groups.less";
 @import "bootstrap/breadcrumbs.less";
 @import "bootstrap/pagination.less";
-@import "bootstrap/pager.less";
+//@import "bootstrap/pager.less";
 
 // Components: Popovers
-@import "bootstrap/modals.less";
-@import "bootstrap/tooltip.less";
-@import "bootstrap/popovers.less";
+//@import "bootstrap/modals.less";
+//@import "bootstrap/tooltip.less";
+//@import "bootstrap/popovers.less";
 
 // Components: Misc
-@import "bootstrap/alerts.less";
+//@import "bootstrap/alerts.less";
 @import "bootstrap/thumbnails.less";
 @import "bootstrap/media.less";
 @import "bootstrap/labels.less";
 @import "bootstrap/badges.less";
 @import "bootstrap/progress-bars.less";
-@import "bootstrap/carousel.less";
-@import "bootstrap/jumbotron.less";
+//@import "bootstrap/carousel.less";
+//@import "bootstrap/jumbotron.less";
 @import "bootstrap/input-groups.less";
 
 // Utility classes
@@ -67,8 +67,8 @@
 @import "extend-core.less"; 	//scaffolding, type, code, grid, tables, forms, buttons
 @import "extend-common.less";	//dropdown, list-groups, wells, close
 @import "extend-nav.less";		//navs, button-groups, breadcrumbs, paginations, pager
-@import "extend-popovers.less"; //modals, tooltips, popovers
-@import "extend-misc.less";		//alerts, thumbnails, labels, badges, progressbars, input groups, carousel...
+//@import "extend-popovers.less"; //modals, tooltips, popovers
+//@import "extend-misc.less";		//alerts, thumbnails, labels, badges, progressbars, input groups, carousel...
 
 // Theme Specific
 @import "layout.less";  		// Sidebar/Layout of the theme
@@ -83,9 +83,9 @@
 
 @import "tiles.less"; 			// Tiles Component
 @import "tabs.less"; 			// Inline Tabs and Accordions Component
-@import "timeline.less";		// Timeline
+//@import "timeline.less";		// Timeline
 @import "apps.less";    		// Custom plugin stylings
-@import "app-inbox.less";    	// App Inbox
+//@import "app-inbox.less";    	// App Inbox
 
 @import "loaders.less";			// CSS Loaders
 
@@ -95,5 +95,5 @@
 // Other Plugin Files
 //----------------------------------
 
-@import "../plugins/form-colorpicker/less/bootstrap-colorpicker.less";
-@import "../plugins/form-jasnyupload/fileinput.less";
+//@import "../plugins/form-colorpicker/less/bootstrap-colorpicker.less";
+//@import "../plugins/form-jasnyupload/fileinput.less";
