--- a/web/elektron/views/layout/header.html
+++ b/web/elektron/views/layout/header.html
@@ -83,7 +83,6 @@
 	ng-show="!layoutLoading"
 	ng-cloak>
 	<a id="leftmenu-trigger" ng-click="toggleLeftBar()"></a>
-	<a id="rightmenu-trigger" ng-click="toggleRightBar()"></a>
 
 
 	<div class="navbar-header pull-left">
@@ -105,10 +104,10 @@
 
 	<ul class="nav navbar-nav pull-right toolbar">
 	  <li class="dropdown" ng-show="!isLoggedIn">
-		<a href="#/login" style="font-size: 14px"><i class="fa fa-sign-in"></i> Log in</a>
+		    <a href="#/login" style="font-size: 14px"><i class="fa fa-sign-in"></i> Log in</a>
 	  </li>
 	  <li class="dropdown" ng-show="isLoggedIn" dropdown>
-		<a href class="dropdown-toggle username" dropdown-toggle><img src="assets/demo/avatar/dangerfield.png" alt="Dangerfield" /></a>
+		    <a href class="dropdown-toggle username" dropdown-toggle><img src="../assets/img/nestor.png" alt="Userfoto" /></a>
 		<ul class="dropdown-menu animated userinfo arrow">
 		  <li class="userlinks">
 			<ul class="dropdown-menu">
@@ -147,121 +146,9 @@
 		  <li class="dd-footer"><a href="#" ng-click="setReadAll($event)">Mark all read</a></li>
 		</ul>
 	  </li>
-	  <li class="dropdown" dropdown ng-controller="NotificationsController" ng-show="isLoggedIn">
-		<a href dropdown-toggle class="dropdown-toggle">
-		  <i class="glyphicon glyphicon-globe"></i><span class="badge badge-indigo" ng-if="unseenCount>0" ng-bind="unseenCount"></span>
-		</a>
-		<ul class="dropdown-menu animated notifications arrow">
-		  <li class="dd-header">
-			<span>Notifications ({{unseenCount}})</span>
-			<span><a href="#"><i class="glyphicon glyphicon-cog"></i></a></span>
-		  </li>
-				<div class="scrollthis" scrollable>
-			<li ng-repeat="item in notifications">
-			  <a href="#" class="{{item.class}}" ng-class="{active: !item.seen}">
-				<button tooltip-placement="top" tooltip-append-to-body="true" tooltip="Mark seen" class="btn-mark-read" ng-if="!item.seen" ng-click="setSeen(item, $event)"><i class="glyphicon glyphicon-unchecked"></i></button>
-				<button tooltip-placement="top" tooltip-append-to-body="true" tooltip="Mark unseen" class="btn-mark-unread" ng-if="item.seen" ng-click="setUnseen(item, $event)"><i class="glyphicon glyphicon-check"></i></button>
-				<span class="time">{{item.time}}</span>
-				<i class="{{item.iconClasses}}"></i>
-				<span class="msg">{{item.text}}</span>
-			  </a>
-			</li>
-				</div>
-		  <li class="dd-footer"><a href="javascript:;" ng-click="setSeenAll($event)">Mark all seen</a></li>
-		</ul>
 	  </li>
 	  <li class="visible-xs-block">
 		  <a href="#" ng-click="toggleSearchBar($event)"><i class="glyphicon glyphicon-search"></i></a>
-	  </li>
-	  <li ng-click="showHeaderBar($event)" class="hidden-xs">
-		  <a href="" id="headerbardropdown"><i class="glyphicon glyphicon-th"></i></a>
-	  </li>
-	  <li class="dropdown demodrop" dropdown>
-		  <a href dropdown-toggle class="dropdown-toggle tooltips"><i class="glyphicon glyphicon-cog"></i></a>
-		  <ul class="dropdown-menu animated arrow dropdown-menu-form" id="demo-dropdown">
-
-			<div class="tabular">
-				<div class="tabular-row">
-					<div class="tabular-cell pt0">
-						<label for="demo-header-variations" class="control-label">Header Colors</label>
-
-						<ul class="list-inline demo-color-variation" id="demo-header-variations">
-							<li><a class="color-default"      href="javascript:;" ng-click="setNavbarClass('navbar-default', $event)"></a></li>
-							<li><a class="color-inverse"      href="javascript:;" ng-click="setNavbarClass('navbar-inverse', $event)"></a></li>
-							<li><a class="color-midnightblue" href="javascript:;" ng-click="setNavbarClass('navbar-midnightblue', $event)"></a></li>
-							<li><a class="color-primary"      href="javascript:;" ng-click="setNavbarClass('navbar-primary', $event)"></a></li>
-							<li><a class="color-indigo"      href="javascript:;" ng-click="setNavbarClass('navbar-indigo', $event)"></a></li>
-							<li><a class="color-success"      href="javascript:;" ng-click="setNavbarClass('navbar-success', $event)"></a></li>
-							<li><a class="color-green"      href="javascript:;" ng-click="setNavbarClass('navbar-green', $event)"></a></li>
-							<li><a class="color-grape"      href="javascript:;" ng-click="setNavbarClass('navbar-grape', $event)"></a></li>
-							<li><a class="color-orange"      href="javascript:;" ng-click="setNavbarClass('navbar-orange', $event)"></a></li>
-							<li><a class="color-danger"      href="javascript:;" ng-click="setNavbarClass('navbar-danger', $event)"></a></li>
-						</ul>
-					</div>
-					<div class="tabular-cell pt0">
-						<label for="demo-color-variations" class="control-label">Sidebar Colors</label>
-						<ul class="list-inline demo-color-variation">
-							<li><a class="color-default"      href="javascript:;" ng-click="setSidebarClass('sidebar-default', $event)"></a></li>
-							<li><a class="color-inverse"      href="javascript:;" ng-click="setSidebarClass('sidebar-inverse', $event)"></a></li>
-							<li><a class="color-midnightblue" href="javascript:;" ng-click="setSidebarClass('sidebar-midnightblue', $event)"></a></li>
-							<li><a class="color-primary"      href="javascript:;" ng-click="setSidebarClass('sidebar-primary', $event)"></a></li>
-							<li><a class="color-indigo"      href="javascript:;" ng-click="setSidebarClass('sidebar-indigo', $event)"></a></li>
-							<li><a class="color-success"      href="javascript:;" ng-click="setSidebarClass('sidebar-success', $event)"></a></li>
-							<li><a class="color-green"      href="javascript:;" ng-click="setSidebarClass('sidebar-green', $event)"></a></li>
-							<li><a class="color-grape"      href="javascript:;" ng-click="setSidebarClass('sidebar-grape', $event)"></a></li>
-							<li><a class="color-orange"      href="javascript:;" ng-click="setSidebarClass('sidebar-orange', $event)"></a></li>
-							<li><a class="color-danger"      href="javascript:;" ng-click="setSidebarClass('sidebar-danger', $event)"></a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="tabular-row">
-					<div class="tabular-cell">
-						<label for="layoutFixedHeader">Fixed Header</label>
-						<div ng-click="$event.stopPropagation()">
-							<input type="checkbox" ng-model="layoutFixedHeader" class="js-switch" ui-switch="{color: '#E43B11', secondaryColor: '#F89279'}" />
-						</div>
-					</div>
-					<div class="tabular-cell">
-						  <label for="layoutLayoutBoxed"><a href="#/layout-fixed">Boxed Layout</a></label>
-						  <div ng-click="$event.stopPropagation()">
-							<input type="checkbox" ng-model="layoutLayoutBoxed" class="js-switch" ui-switch="{color: '#E43B11', secondaryColor: '#F89279'}" />
-						  </div>
-					</div>
-				</div>
-				<div class="tabular-row">
-					<div class="tabular-cell">
-						<label for="layoutLayoutHorizontal">Horizontal Nav</label>
-						<div ng-click="$event.stopPropagation()">
-							<input type="checkbox" ng-model="layoutLayoutHorizontal" class="js-switch" ui-switch="{color: '#E43B11', secondaryColor: '#F89279'}" />
-						</div>
-					</div>
-					<div class="tabular-cell">
-					</div>
-				</div>
-				<div class="tabular-row">
-					<div class="tabular-cell pb0 pr10">
-					  <label for="layoutDropdownTransitionStyle">Dropdown Animation</label>
-					  <div ng-click="$event.stopPropagation()">
-						<select ng-model="layoutDropdownTransitionStyle" class="form-control">
-							<option value="{{item}}"
-							ng-selected="item == layoutDropdownTransitionStyle"
-							ng-repeat="item in layoutPageTransitionStyleList">{{item}}</option>
-						</select>
-					  </div>
-					</div>
-					<div class="tabular-cell pb0 pl10">
-						<label for="layoutPageTransitionStyle">Transition Animation</label>
-						  <div ng-click="$event.stopPropagation()">
-							<select ng-model="layoutPageTransitionStyle" class="form-control">
-								<option value="{{item}}"
-								ng-selected="item == layoutPageTransitionStyle"
-								ng-repeat="item in layoutPageTransitionStyleList">{{item}}</option>
-							</select>
-						  </div>
-					</div>
-				</div>
-			</div>
-		  </ul>
 	  </li>
 	</ul>
 </header>
